# HexOvermindServer

./: .env  .gitignore  Cargo.toml  dbschema.sql  flatbuffer.fbs  notes.md  notes.txt  schema.fbs  test.nbt
src/: flatbuffer.rs  main.rs  schema_generated.rs  util.rs
