[package]
name = "hex_overmind_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
dotenv = "0.15.0"
flatbuffers = "23.5.26"
lazy_static = "1.4.0"
once_cell = { version = "1.18.0", features = ["std"] }
quartz_nbt = "0.2.8"
rand = { version = "0.8.5", features = ["min_const_gen"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "mysql", "macros", "time"] }
time = "0.3.22"
tokio = { version = "1.28.2", features = ["macros", "rt", "rt-multi-thread", "signal", "process", "time"] }
tracing = { version = "0.1.37", features = ["max_level_debug"] }
tracing-subscriber = { version = "0.3.17", features = ["local-time", "time"] }
